tag this as 1.4, fixing bugs #4, #6, #5
additionaly the new BugSense library doesn't work with the old
assemblies of WP7

--- a/WindowsPhone/RecipeHubApp/RecipeHubApp/RecipeHubApp.csproj
+++ b/WindowsPhone/RecipeHubApp/RecipeHubApp/RecipeHubApp.csproj
@@ -54,9 +54,6 @@
     <Reference Include="AdDuplex.WindowsPhone">
       <HintPath>..\libs\AdDuplex.WindowsPhone.dll</HintPath>
     </Reference>
-    <Reference Include="AdRotator">
-      <HintPath>..\..\..\..\..\..\..\..\MyWork\AdRotatorWP-1.0.3\lib\sl4-wp71\AdRotator.dll</HintPath>
-    </Reference>
     <Reference Include="BugSense">
       <HintPath>..\libs\BugSense.dll</HintPath>
     </Reference>
@@ -154,7 +151,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="add.png" />
-    <Content Include="AddRotatorConfig.xml" />
+    <Content Include="AddRotatorConfig.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="alarm-ring.wma" />
     <Content Include="settings.png" />
     <Content Include="ApplicationIcon.png">
