Fix bug #13, implementing translation engine
Forks number node was messed up, cambios para consumir paginas de
foxplay, settings page updated, mejora en la implementacion de alarmas

--- a/WindowsPhone/RecipeHubApp/RecipeHubApp/RecipeHubApp.csproj
+++ b/WindowsPhone/RecipeHubApp/RecipeHubApp/RecipeHubApp.csproj
@@ -158,6 +158,7 @@
       <SubType>Designer</SubType>
     </None>
     <DesignTimeOnly Include="SampleData\IngredientsDataSource\IngredientsDataSource.xsd" />
+    <None Include="RecipeHubApp_2014_09_03_16_52_06.sap" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="add.png" />
